added inputs to workflows

--- a/.github/workflows/cicd_branch.yml
+++ b/.github/workflows/cicd_branch.yml
@@ -7,3 +7,6 @@ on:
 jobs:
   reuse:
     uses: EcommerceAppDeployment/roboshop-github-actions/.github/workflows/ci_branch.yml@v1
+    with:
+      app_type: nodejs
+      app_name: user
