--- a/.github/workflows/cicd_main.yml
+++ b/.github/workflows/cicd_main.yml
@@ -7,3 +7,6 @@ on:
 jobs:
   reuse:
     uses: EcommerceAppDeployment/roboshop-github-actions/.github/workflows/ci_main.yml@main
+    with:
+      app_type: nodejs
+      app_name: user
